# pid_transmodel_source

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agent/rules/: rule-number-1.md
.idx/: dev.nix
bot_whatsapp/: main.py
monolito/: manage.py
monolito/contas/: admin.py  apps.py  models.py
monolito/empresa/: admin.py  apps.py  models.py
monolito/logistica/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
monolito/sistema_fretamento/: asgi.py  settings.py  urls.py  wsgi.py
monolito/transmodel/: apps.py  import_service.py  services.py  urls.py  views.py
monolito/transmodel/management/commands/: import_gtfs.py
