[project]
name = "projeto-transporte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asgiref==3.11.0",
    "certifi==2026.1.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "django==6.0.1",
    "django-environ>=0.12.1",
    "djangorestframework>=3.16.1",
    "fastapi==0.128.0",
    "gunicorn==25.0.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "packaging==26.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv>=1.2.1",
    "redis==7.1.0",
    "ruff==0.14.14",
    "sqlparse==0.5.5",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uvicorn==0.40.0",
]
